# aiomultiprocess

./: .appveyor.yml  .flake8  .gitignore  .pylint  .pyup.yml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  makefile  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.github/: dependabot.yml  issue_template.md  pull_request_template.md
.github/workflows/: build.yml
aiomultiprocess/: __init__.py  __version__.py  core.py  pool.py  scheduler.py  types.py
aiomultiprocess/tests/: __init__.py  __main__.py  base.py  core.py  perf.py  pool.py  scheduler.py
docs/: api.rst  changelog.rst  conf.py  contributing.rst  guide.rst  index.rst
docs/_static/: custom.css
docs/_templates/: badges.html  omnilib.html
tests/: __init__.py  base.py  core.py  perf.py
